--- a/library_base/src/main/AndroidManifest.xml
+++ b/library_base/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.library_base">
 
+    <application android:networkSecurityConfig="@xml/base_network_security_config"/>
 </manifest>
